<resources>
    <string name="app_name">Baking App</string>
    <string name="image_main">Image main</string>
    <string name="nutella_pie">Nutella Pie</string>
    <string name="brownies">Brownies</string>
    <string name="yellowcake">Yellowcake</string>
    <string name="cheesecake">Cheesecake</string>
    <string name="image_recipe">Image recipe</string>
    <string name="step">Step</string>
    <string name="next">Next</string>
    <string name="ingredients">Ingredients</string>
    <string name="quantity">Quantity:</string>
    <string name="measure">Measure:</string>
    <string name="ingredient">Ingredient:</string>
    <string name="no_video">No video</string>
    <string name="instructions">Instructions</string>
    <string name="title">Title</string>
    <string name="introduction">Introduction</string>
    <string name="add_widget">Add widget</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="configure">Configure</string>
    <string name="image_widget">image_widget</string>
    <string name="list_epmty">List Epmty</string>
    <string name="no_network">No network connection!</string>
    <string name="retry">RETRY</string>
    <string name="image_thumbnail">Image Thumbnail</string>
    <string name="choose_recipe">Choose recipe</string>

</resources>
