<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white">

    <FrameLayout
        android:id="@+id/widget"
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_widget"
        android:background="@color/colorPrimary">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:contentDescription="@string/app_name"
            android:text="@string/app_name"
            android:textSize="@dimen/model_text_size_18"
            android:textColor="@color/primary_text"
            android:textStyle="bold"/>

        <ImageView
            android:id="@+id/iv_widget_logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:contentDescription="@string/image_recipe"
            android:src="@mipmap/ic_logo" />
    </FrameLayout>


    <ListView
        android:id="@+id/listViewWidget"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <TextView
        android:id="@+id/empty_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:text="@string/list_epmty"
        android:textColor="#ffffff"
        android:textSize="@dimen/model_text_size_20"
        android:visibility="gone" />
</LinearLayout>