<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:padding="@dimen/widget_margin"
    android:orientation="vertical">
    <FrameLayout
        android:id="@+id/widget"
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_widget"
        android:background="@color/colorPrimary">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:contentDescription="@string/app_name"
            android:text="@string/app_name"
            android:textSize="@dimen/model_text_size_18"
            android:textColor="@color/primary_text"
            android:textStyle="bold"/>

        <ImageView
            android:id="@+id/iv_widget_logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:contentDescription="@string/image_recipe"
            android:src="@mipmap/ic_logo" />
    </FrameLayout>

    <TextView
        android:id="@+id/appwidget_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="64dp"
        android:contentDescription="@string/appwidget_text"
        android:textColor="@color/primary_text"
        android:textSize="24sp"
        android:textStyle="bold|italic" />

    <TextView
        android:id="@+id/data_recipe"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/model_margin_8dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/appwidget_text"
        android:layout_marginLeft="@dimen/model_margin_8dp" />
</RelativeLayout>