<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container_detail"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.DetailRecipeActivity"
    tools:layout_editor_absoluteY="81dp">

    <TextView
        android:id="@+id/tv_item_detail_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:gravity="center"
        android:text="@string/title"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <com.google.android.exoplayer2.ui.SimpleExoPlayerView
        android:id="@+id/player_video"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:layout_marginTop="19dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tv_item_detail_title" />


    <TextView
        android:id="@+id/tv_item_detail_ingredients"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_left_right_row_item_main"
        android:layout_marginLeft="@dimen/margin_left_right_row_item_main"
        android:layout_marginRight="@dimen/margin_left_right_row_item_main"
        android:text="@string/instructions"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/player_video"
        android:layout_marginStart="@dimen/margin_left_right_row_item_main" />


    <com.robertlevonyan.views.customfloatingactionbutton.FloatingActionButton
        android:id="@+id/fb_steps"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="12dp"
        android:layout_marginEnd="36dp"
        android:layout_marginStart="36dp"
        android:gravity="center_horizontal"
        android:textSize="18sp"
        app:fabColor="@color/colorPrimary"
        app:fabElevation="5dp"
        app:fabText="@string/next"
        app:fabType="roundedSquare"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</android.support.constraint.ConstraintLayout>
