<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container_detail"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.DetailRecipeActivity"
    tools:layout_editor_absoluteY="81dp">

    <TextView
        android:id="@+id/tv_item_detail_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/model_margin_top_6"
        android:gravity="center"
        android:text="@string/title"
        android:textSize="@dimen/model_text_size_16"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <com.google.android.exoplayer2.ui.SimpleExoPlayerView
        android:id="@+id/player_video"
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_appbarlayout_detail_steps_600_land_port"
        app:layout_constraintTop_toBottomOf="@+id/tv_item_detail_title" />


    <TextView
        android:id="@+id/tv_item_detail_ingredients"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/model_margin_8dp"
        android:layout_marginEnd="@dimen/model_margin_8dp"
        android:layout_marginStart="@dimen/model_margin_8dp"
        android:layout_marginTop="@dimen/model_margin_8dp"
        android:background="@drawable/border_empty"
        android:maxLines="6"
        android:padding="@dimen/model_margin_8dp"
        android:scrollbars="vertical"
        android:text="@string/instructions"
        android:textSize="@dimen/model_text_size_16"
        app:layout_constraintBottom_toTopOf="@+id/fb_steps"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/player_video"
        app:layout_constraintVertical_bias="0.0" />


    <com.robertlevonyan.views.customfloatingactionbutton.FloatingActionButton
        android:id="@+id/fb_steps"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="@dimen/margin_bottom_detail_steps"
        android:layout_marginEnd="@dimen/margin_end_detail_steps"
        android:layout_marginStart="@dimen/margin_end_detail_steps"
        android:gravity="center_horizontal"
        android:textSize="@dimen/model_text_size_18"
        app:fabColor="@color/colorAccent"
        app:fabElevation="@dimen/elevation"
        app:fabText="@string/next"
        app:fabType="roundedSquare"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</android.support.constraint.ConstraintLayout>
