<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="4dp">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/quantity"
                android:paddingLeft="@dimen/margin_left_right_row_item_main"
                android:paddingRight="@dimen/margin_left_right_row_item_main"
                android:paddingStart="@dimen/margin_left_right_row_item_main"
                android:textColor="@color/primary_text"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/measure"
                android:paddingLeft="@dimen/margin_left_right_row_item_main"
                android:paddingRight="@dimen/margin_left_right_row_item_main"
                android:paddingStart="@dimen/margin_left_right_row_item_main"
                android:textColor="@color/primary_text" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ingredient"
                android:paddingLeft="@dimen/margin_left_right_row_item_main"
                android:paddingRight="@dimen/margin_left_right_row_item_main"
                android:paddingStart="@dimen/margin_left_right_row_item_main"
                android:textColor="@color/primary_text"/>


        </LinearLayout>

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_item_quantity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/margin_left_right_row_item_main"
                android:paddingRight="@dimen/margin_left_right_row_item_main"
                android:paddingStart="@dimen/margin_left_right_row_item_main"
                android:textColor="@color/secondary_text" />

            <TextView
                android:id="@+id/tv_item_measure"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/margin_left_right_row_item_main"
                android:paddingRight="@dimen/margin_left_right_row_item_main"
                android:paddingStart="@dimen/margin_left_right_row_item_main"
                android:textColor="@color/secondary_text" />

            <TextView
                android:id="@+id/tv_item_ingredient"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/margin_left_right_row_item_main"
                android:paddingRight="@dimen/margin_left_right_row_item_main"
                android:paddingStart="@dimen/margin_left_right_row_item_main"
                android:textColor="@color/secondary_text" />


        </LinearLayout>


    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/divider"/>
</android.support.constraint.ConstraintLayout>